# ai-resume-matcher

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT_READY.md  DOCKER_DEPLOYMENT.md  Dockerfile  FEATURES_SUMMARY.md  MULTI_COLLECTION_MATCHING.md  PRD.md  README.md  SETUP_GUIDE.md  STREAMLIT_SUMMARY.md  TASKLIST.md  advanced_demo.py  demo_example.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml  quick_demo.py  quick_test.py  quick_vector_loader.py  requirements.txt  run_streamlit.py  simple_vector_loader.py  streamlit_app.py  test_debug.py  test_integration.py  test_job_matching.py  test_sample_data.py  test_vector_search.py
.claude/: claude.md
.github/: copilot-instructions.md
app/: main.py
app/core/: config.py  logging.py
app/evaluation/: __init__.py  metrics.py  run_evaluations.py
app/models/: langchain_models.py  resume_data.py
app/services/: data_pipeline.py  document_generator.py  embeddings.py  job_processor.py  job_scraper.py  knowledge_graph.py  langchain_agents.py  llm.py  prompt_manager.py  resume_customizer.py  resume_processor.py  vector_store.py
app/utils/: file_utils.py  load_resumes_to_vector.py  pdf_generator.py  process_resume_csv.py
docs/: APPLICATION_FLOW_DIAGRAM.md  ARCHITECTURE.md  DEMO_STEPS.md  resume_customization_workflow.md
src/core/: exceptions.py
src/services/: langchain_agents.py  matcher.py  memory_service.py  resume_customizer.py  vector_store.py
tests/: conftest.py
tests/services/: test_job_deduplication.py  test_job_scraper.py  test_langchain_agents.py  test_resume_customizer.py  (+1 more)
(+5 files in other folders)
